--- a/Ex1.ipynb
+++ b/Ex1.ipynb
@@ -767,7 +767,7 @@
         "y = train[[\"count\"]].values\n",
         "\n",
         "\n",
-        "print(type(X), X.shape)  #(10886, 8)\n",
+        "print(type(X), X.shape),
         "\n",
         "#train /test data 분리\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
